--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
         padding: 50px;
         font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
         text-align: center;
-        background-color: #222;
+        background-color: #000;
         color: #FFF;
       }
       input {
@@ -15,9 +15,15 @@ html
         width: 400px;
         padding: 5px;
       }
+      img {
+        width: 100%;
+        max-width: 500px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+      }
   body
     h1 Join the #{community} community on Slack!
-    img(src="http://i.imgur.com/pPru01U.jpg")
+    img(src="https://i.imgur.com/RWEvw6K.jpg")
     form(method="POST", action="/invite")#join-form
       input(type="text", name="email", placeholder="Enter your email")#slack-email
     script.
