chore: update hack upstate image

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ html
       }
   body
     h1 Join the #{community} community on Slack!
-    img(src="https://i.imgur.com/RWEvw6K.jpg")
+    img(src="https://i.imgur.com/Dz685U1.png")
     form(method="POST", action="/invite")#join-form
       input(type="text", name="email", placeholder="Enter your email")#slack-email
     script.
