chore: change background color to be light

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
         padding: 50px;
         font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
         text-align: center;
-        background-color: #000;
+        background-color: #f3f3f3;
         color: #FFF;
       }
       input {
