--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,8 @@ html
         max-width: 400px;
         margin: 0px auto;
       }
-      input[type=text] {
+      #slack-email {
+        box-sizing: border-box;
         width: 100%;
         margin-top: 20px;
 
@@ -33,10 +34,10 @@ html
         padding: 10px;
 
         width: 100%;
-        box-sizing: content-box;
 
         background-color: #3498d5;
         color: #fff;
+        border: 1px solid #858585;
         border-radius: 4px;
         line-height: 46px;
         text-align: center;
@@ -44,6 +45,13 @@ html
         font-size: 18px;
         font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
         font-weight: bold;
+
+        transition: all 250ms ease-in-out;
+        cursor: pointer;
+      }
+      input[type=submit]:active {
+        border: 1px solid #858585;
+        background-color: #2b7daf;
       }
       img {
         width: 100%;
@@ -56,7 +64,7 @@ html
     h1 Join the #{community} community on Slack!
     div.centered
       form(method="POST", action="/invite")#join-form
-        input(type="text", name="email", placeholder="Enter your email")#slack-email
+        input(type="email", name="email", placeholder="Enter your email")#slack-email
         input(type="submit", value="Join Slack")
     script.
       var form = document.getElementById('join-form');
